2012-12-12  Hani Benhabiles  <kroosec@gmail.com>

	* src/gsad_omp.c (export_target_omp, export_note_omp)
	(export_override_omp): Use export_resource.

2012-12-12  Hani Benhabiles  <kroosec@gmail.com>

	Add alerts information in Report Formats details page.

	* src/gsad_omp.c (get_report_format): Add alerts attribute in get_one
	request.

	* src/html/omp.xsl (report_format [details]): Add Alerts using this
	Report Format table.

2012-12-12  Matthew Mundell <matthew.mundell@greenbone.net>

	Add the refresh input to the headers of the new-style get pages.

	* src/gsad_omp.c (xsl_transform_omp): Add AUTOREFRESH to ENVELOPE.

	* src/html/gsad.xsl (autorefresh): Get the URL from the ENVELOPE instead
	of always using get_tasks.

	* src/html/omp.xsl (list-window): Add the refresh input that was
	previously on the tasks page.

2012-12-12  Hani Benhabiles  <kroosec@gmail.com>

	* src/gsad_omp.c (export_report_format_omp): Use export_resource.

2012-12-11  Hani Benhabiles  <kroosec@gmail.com>

	Update help documentation for Port Lists.

	* src/html/help.xsl (port_lists.html, new_port_list.html)
	(port_list_details.html): New templates. Use various templates and
	content from configure_port_lists.html.
	(configure_port_lists.html): Removed.
	(report_formats.html): Fix typo.

2012-12-11  Hani Benhabiles  <kroosec@gmail.com>

	* src/gsd_omp.c (get_port_list): Send targets and ranges attributes
	instead of details.

2012-12-11  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/wizard.xsl (wizard-icon, wizard): Let page element determine
	visibility.

2012-12-11  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_base.c (params_add): Ensure that name and value are always
	strings.

	* src/html/omp.xsl (details-header-icon): Remove extra ampersand from
	New link.

2012-12-11  Hani Benhabiles  <kroosec@gmail.com>

	* src/html/omp.xsl (details-header-icons): Add noedit parameter.
	(port_list [details]): Fix type parameter and use noedit parameter